# note-ai-generator

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/sources/: ameblo_articles.txt  key_concepts.txt  note_content.txt  profile_detail.txt  save_sources.py  website_content.txt  youtube_and_seminars.txt
prompts/: article_generation.txt  content_review.txt  style_analysis.txt  system_base.txt  topic_extraction.txt
scripts/: demo.py
src/: cli.py  config.py
src/auth/: __init__.py  auth_manager.py  tier_gate.py
src/db/: database.py  migrations.py  schema.sql  schema_v2.sql
src/generator/: __init__.py  article_generator.py  prompt_builder.py  style_profile.py
src/ingester/: __init__.py  base.py  content_chunker.py  text_ingester.py  url_ingester.py
src/output/: __init__.py  markdown_writer.py
src/scraper/: __init__.py  article_parser.py  models.py  note_client.py  trend_analyzer.py
src/web/: app.py  auth_pages.py  tier_pages.py  upgrade_prompts.py
